[package]
name = "mao_core"
version = "0.1.0"
edition = "2021"
description = "A core library for playing to the mao board game, with the handle of custom rules !"
license-file = "LICENSE"


[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
indextree = "4.6.1"
libloading = "0.8"
paste = "1.0.15"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
